blog/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  annotations:
    linkerd.io/inject: enabled
