blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    app: blog
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: blog
