blog/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lukasrotermund.invalid
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog
              port: 
                number: 80
